Fix issue where unit test project failed to compile.
Restructured main project to be within src/ and tests to be within tests/ and have the solution file in root. This ensures that we avoid any problematic "Test project within Main project" issues.

--- a/tests/FamilyTreeTest.csproj
+++ b/tests/FamilyTreeTest.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Family Tree.csproj" />
+    <ProjectReference Include="..\src\Family Tree.csproj" />
   </ItemGroup>
 
 </Project>
